book date_published -> year_published

--- a/creations/templates/books.html
+++ b/creations/templates/books.html
@@ -17,7 +17,7 @@
     <div class="info">
       <div class="info-header">
         <span class="title">{{ book.title }}</span>
-        <span class="date">{{ book.date_published|date:"Y" }}</span>
+        <span class="date">{{ book.year_published }}</span>
         <a class="purchase-link" href="{{ book.purchase_url }}">
         click to purchase</a>
       </div>
