--- a/creations/static/stylesheets/books.sass
+++ b/creations/static/stylesheets/books.sass
@@ -20,6 +20,7 @@
       .info-header
         width: 100%
         margin-bottom: 20px
+        white-space: nowrap
 
         span
           float: left
