--- a/creations/static/stylesheets/books.sass
+++ b/creations/static/stylesheets/books.sass
@@ -17,21 +17,21 @@
       float: right
       width: 75%
 
-      .info-header
+      .info-header, .purchase-link, .description
+        float: left
         width: 100%
-        margin-bottom: 20px
-        white-space: nowrap
 
+      .info-header, .description
+        margin-bottom: 20px
+
+      .info-header
         span
+          font-size: 20px
           float: left
           margin-right: 20px
 
           &.title
-            font-size: 22px
             font-style: italic
-
-          &.purchase-link
-            float: right
 
   .book-separator
     float: left
