multiple columns of books

--- a/creations/static/stylesheets/books.sass
+++ b/creations/static/stylesheets/books.sass
@@ -1,41 +1,14 @@
 #books
   #book
     float: left
-    width: 100%
-    clear: both
+    width: 20%
+    margin-right: 5%
+    margin-bottom: 5%
 
-    .photo
+    img, span, a
       float: left
-      width: 20%
-      margin-right: 5%
+      width: 100%
+      margin-bottom: 5px
 
-      img
-        width: 100%
-        max-width: 250px
-
-    .info
-      float: right
-      width: 75%
-
-      .info-header, .purchase-link, .description
-        float: left
-        width: 100%
-
-      .info-header, .description
-        margin-bottom: 20px
-
-      .info-header
-        span
-          font-size: 20px
-          float: left
-          margin-right: 20px
-
-          &.title
-            font-style: italic
-
-  .book-separator
-    float: left
-    margin: 40px 10%
-    height: 1px
-    width: 80%
-    background-color: $chickadee-light-gray
+    .title
+      font-style: italic
