add blog to header

--- a/website/templates/header.html
+++ b/website/templates/header.html
@@ -29,6 +29,8 @@
       Books
     </a>
 
+    <a href="http://lauraerickson.blogspot.com">Blog</a>
+
   </div>
 
   <a id="admin-link" href="{% url 'admin:index' %}">Admin</a>
