--- a/creations/static/stylesheets/books.sass
+++ b/creations/static/stylesheets/books.sass
@@ -1,8 +1,7 @@
 #books
   #book
     float: left
-    margin-right: 5%
-    margin-bottom: 5%
+    margin: 0 5% 50px 0
     width: 20%
 
     img, span, a
