--- a/creations/static/stylesheets/books.sass
+++ b/creations/static/stylesheets/books.sass
@@ -1,42 +1,47 @@
 #books
-  #book
-    float: left
-    margin: 0 5% 50px 0
-    width: 20%
+  #all-books
+    width: 105%
+    padding: 0 2.5%
+    position: relative
+    left: -5%
 
-    img, span, a
+    .book
       float: left
-      width: 100%
-      margin-bottom: 5px
+      margin: 0 2.5% 50px 2.5%
+      width: 20%
 
-    .title
-      font-style: italic
-      font-weight: bold
+      img, span, a
+        float: left
+        width: 100%
+        margin-bottom: 5px
 
-    &:nth-child(4n+2)
-      clear: left
+      .title
+        font-style: italic
+        font-weight: bold
 
-  @media (max-width: 1000px)
-    #book
-      width: 28%
-
-      &:nth-child(4n+2)
-        clear: none
-      &:nth-child(3n+2)
+      &:nth-child(4n+1)
         clear: left
 
-  @media (max-width: 750px)
-    #book
-      width: 40%
+    @media (max-width: 1000px)
+      .book
+        width: 28.3%
 
-      &:nth-child(4n+2)
-        clear: none
-      &:nth-child(3n+2)
-        clear: none
-      &:nth-child(even)
-        clear: left
+        &:nth-child(4n+1)
+          clear: none
+        &:nth-child(3n+1)
+          clear: left
 
-  @media (max-width: 500px)
-    #book
-      width: 100%
-      margin-right: none
+    @media (max-width: 750px)
+      .book
+        width: 45%
+
+        &:nth-child(4n+1)
+          clear: none
+        &:nth-child(3n+1)
+          clear: none
+        &:nth-child(2n+1)
+          clear: left
+
+    @media (max-width: 500px)
+      .book
+        width: 95%
