--- a/website/static/stylesheets/page.sass
+++ b/website/static/stylesheets/page.sass
@@ -14,7 +14,7 @@ html, body
   background: $chickadee-cream
   padding: 30px
   border-radius: 2px
-  overflow: auto
+  overflow: hidden
   height: auto
 
 #footer
