--- a/website/templates/header.html
+++ b/website/templates/header.html
@@ -40,7 +40,7 @@
     </a>
 
     <a href="{{ waystohelp_url }}"
-        {% ifequal request.path radio_url %}
+        {% ifequal request.path waystohelp_url %}
         class="active"
         {% endifequal %}>
       101 Ways To Help Birds
