--- a/website/templates/about.html
+++ b/website/templates/about.html
@@ -6,5 +6,6 @@
 {% block page_title %}About {{ laura.get_full_name }}{% endblock %}
 
 {% block content %}
+  <img src="{{ laura.userprofile.primary_photo }}" />
   {{ laura.userprofile.about|markdown }}
 {% endblock %}
