add link to books on about laura page

--- a/website/templates/about.html
+++ b/website/templates/about.html
@@ -8,4 +8,5 @@
 {% block content %}
   <img src="{{ laura.userprofile.primary_photo }}" />
   {{ laura.userprofile.about|markdown }}
+  <a href="{% url 'books_url' %}">Laura's Books</a>
 {% endblock %}
