--- a/website/templates/about.html
+++ b/website/templates/about.html
@@ -6,7 +6,7 @@
 {% block page_title %}About {{ laura.get_full_name }}{% endblock %}
 
 {% block content %}
-  <img src="{{ laura.userprofile.primary_photo }}" />
+  <img src="{{ MEDIA_URL }}{{ laura.userprofile.primary_photo }}" />
   {{ laura.userprofile.about|markdown }}
   <a href="{% url 'books_url' %}">Laura's Books</a>
 {% endblock %}
