minimal style to about laura page

--- a/website/static/stylesheets/styles.sass
+++ b/website/static/stylesheets/styles.sass
@@ -18,6 +18,7 @@ $base-font-family: Georgia, serif
 @import header
 @import footer
 @import home
+@import about
 @import ../../../birds/static/stylesheets/bird
 @import ../../../birds/static/stylesheets/birds
 @import ../../../creations/static/stylesheets/books
