--- a/website/templates/about.html
+++ b/website/templates/about.html
@@ -6,8 +6,12 @@
 {% block page_title %}About {{ laura.get_full_name }}{% endblock %}
 
 {% block content %}
-  <img src="{{ MEDIA_URL }}{{ laura.userprofile.primary_photo }}"
+  <img id="primary-photo"
+       src="{{ MEDIA_URL }}{{ laura.userprofile.primary_photo }}"
        width="500" height="440" />
-  {{ laura.userprofile.about|markdown }}
-  <a href="{% url 'books_url' %}">Laura's Books</a>
+  <div id="blurb">{{ laura.userprofile.about|markdown }}</div>
+
+  <div id="links">
+    <a href="{% url 'books_url' %}">Laura's Books</a>
+  </div>
 {% endblock %}
