margins on about page

--- a/website/static/stylesheets/about.sass
+++ b/website/static/stylesheets/about.sass
@@ -1,12 +1,13 @@
 #about
   #primary-photo
     float: left
-    width: 50%
+    width: 40%
 
   #blurb
     float: right
     width: 50%
 
   #links
+    margin-top: 40px
     float: left
     clear: both
