--- a/website/static/stylesheets/font.sass
+++ b/website/static/stylesheets/font.sass
@@ -14,6 +14,9 @@ body
   font-size: $base-font-size
   color: $chickadee-black
 
+#content
+  line-height: 125%
+
 h1, h2, h3, h4
   margin: 0
   padding: 0
