fix bug of scientific name no longer showing in taxonomic search

--- a/birds/templates/birds_taxonomical.html
+++ b/birds/templates/birds_taxonomical.html
@@ -45,7 +45,7 @@
       <ul class="species collapsed">
       {% for species in subfamily.list %}
         <li><a href="{% url 'bird_url' id=species.id %}">
-          <i>{{ species }}</i> ({{ species.common_name }})
+          <i>{{ species.name }}</i> ({{ species.common_name }})
         </a></li>
       {% endfor %}
       </ul>
