display bird species and other tags on radio and book pages. temporary fix for django admin header having new styles in 1.7

--- a/creations/static/stylesheets/books.sass
+++ b/creations/static/stylesheets/books.sass
@@ -10,7 +10,7 @@
       margin: 0 2.5% 50px 2.5%
       width: 20%
 
-      img, span, a
+      img, span, ul, div
         float: left
         width: 100%
         margin-bottom: 5px
