--- a/creations/static/stylesheets/radio.sass
+++ b/creations/static/stylesheets/radio.sass
@@ -1,6 +1,17 @@
 #radio
-  .program
-    margin-bottom: 30px
+  ul, li
+    list-style-type: none
 
-    audio
-      margin-top: 10px
+  #all-programs
+    .program
+      float: left
+      width: 100%
+      margin-bottom: 30px
+
+      p
+        margin: 0
+
+      div
+        float: left
+        clear: both
+        margin-bottom: 10px
