--- a/website/static/stylesheets/elements.sass
+++ b/website/static/stylesheets/elements.sass
@@ -22,3 +22,12 @@
 .card
   border: 1px solid $chickadee-light-gray
   border-radius: 3px
+
+
+.relevant-species, .tags
+  max-height: 100px
+  overflow: scroll
+  background: white
+
+ul
+  margin: 0
