--- a/website/templates/admin/base_site.html
+++ b/website/templates/admin/base_site.html
@@ -8,14 +8,10 @@
 
 {% block nav-global %}
 <style type="text/css">
-  .admin-menu-item {margin:0 10px 10px;display:block;float:left;}
+  #admin-menu-site-home {position:absolute;top:0;right:0;}
 </style>
 
-<style type="text/css">
-  #admin-menu-site-home {float:right;}
-</style>
-
-<a href="/" id="admin-menu-site-home" class="admin-menu-item">
+<a href="/" id="admin-menu-site-home">
   Back To Website
 </a>
 {% endblock %}
