--- a/creations/templates/radio.html
+++ b/creations/templates/radio.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load markdown_deux_tags %}
 
 {% block body_id %}radio{% endblock %}
 
@@ -6,30 +7,57 @@
 
 {% block content %}
 
-<ul>
+<ul id="all-programs">
 {% regroup programs by original_air_date|date:"Y" as years %}
 {% for year in years %}
   <li>{{ year.grouper }}</li>
   <ul>
   {% for program in year.list %}
     <li class="program">
-      <b>{{ program.title }}</b> ({{ program.original_air_date }})
-      <br>
-      {{ program.description|markdown }}
+      <div class="program-title">
+        <b>{{ program.title }}</b> ({{ program.original_air_date }})
+      </div>
+
+      <div>{{ program.description|markdown }}</div>
+
+      {% if program.species.all|length %}
+      <div>
+        <span>Relevant species:</span>
+        <ul class="relevant-species">
+        {% for bird in program.species.all %}
+          <li>
+            <a href="{% url 'bird_url' id=bird.id%}">{{ bird }}</a>
+          </li>
+        {% endfor %}
+        </ul>
+      </div>
+      {% endif %}
+
+      {% if program.tags.all|length %}
+      <div>
+        <span>Tags:</span>
+        <ul class="tags">
+        {% for tag in program.tags.all %}
+          <li>{{ tag }}</li>
+        {% endfor %}
+        </ul>
+      </div>
+      {% endif %}
+
       {% if program.supplemental_content_url %}
-        <br><a href="{{ program.supplemental_content_url }}">See
-          transcript and photos</a>
+        <div><a href="{{ program.supplemental_content_url }}">See
+            transcript and photos</a></div>
       {% endif %}
 
       {% if program.file %}
-      <br>
-      <audio controls preload="none">
-        <source src="{{ MEDIA_URL }}{{ program.file }}" type="audio/mpeg">
-        Your browser does not support the audio element.
-      </audio>
-      <a href="{{ MEDIA_URL }}{{ program.file }}">Download .mp3</a>
+      <div>
+        <audio controls preload="none">
+          <source src="{{ MEDIA_URL }}{{ program.file }}" type="audio/mpeg">
+          Your browser does not support the audio element.
+        </audio>
+        <a href="{{ MEDIA_URL }}{{ program.file }}">Download .mp3</a>
+      </div>
       {% endif %}
-
     </li>
   {% endfor %}
   </ul>
