add bullets back to species/tag lists within radio program

--- a/creations/static/stylesheets/radio.sass
+++ b/creations/static/stylesheets/radio.sass
@@ -1,17 +1,16 @@
 #radio
-  ul, li
+  #all-programs, .year, .year-programs, .program
     list-style-type: none
 
-  #all-programs
-    .program
+  .program
+    float: left
+    width: 100%
+    margin-bottom: 30px
+
+    p
+      margin: 0
+
+    div
       float: left
-      width: 100%
-      margin-bottom: 30px
-
-      p
-        margin: 0
-
-      div
-        float: left
-        clear: both
-        margin-bottom: 10px
+      clear: both
+      margin-bottom: 10px
