about laura links on top right

--- a/website/static/stylesheets/about.sass
+++ b/website/static/stylesheets/about.sass
@@ -10,6 +10,10 @@
     margin-right: 5%
 
   #links
-    margin-top: 40px
+    width: 100%
     float: left
-    clear: both
+    margin-bottom: $vertical-whitespace
+
+    a
+      float: right
+      margin-left: 40px
