--- a/website/static/stylesheets/styles.sass
+++ b/website/static/stylesheets/styles.sass
@@ -12,6 +12,8 @@ $peach-orange: #deb888
 $base-font-size: 17px
 $base-font-family: Georgia, serif
 
+$vertical-whitespace: 40px
+
 @import font
 @import elements
 @import page
