--- a/website/templates/about.html
+++ b/website/templates/about.html
@@ -6,11 +6,13 @@
 {% block page_title %}About {{ laura.get_full_name }}{% endblock %}
 
 {% block content %}
+  <div id="links">
+    <a href="http://flickr.com/lauraerickson">
+      Laura's Photos on Flickr</a>
+    <a href="{% url 'books_url' %}">Laura's Books</a>
+  </div>
+
   <img id="primary-photo"
        src="{{ MEDIA_URL }}{{ laura.userprofile.primary_photo }}" />
   <div id="blurb">{{ laura.userprofile.about|markdown }}</div>
-
-  <div id="links">
-    <a href="{% url 'books_url' %}">Laura's Books</a>
-  </div>
 {% endblock %}
