--- a/birds/templates/birds_taxonomical.html
+++ b/birds/templates/birds_taxonomical.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block body_id %}birds{% endblock %}
+{% block body_id %}birds-taxonomical{% endblock %}
 
 {% block page_title %}Find Birds By Taxonomy{% endblock %}
 
