--- a/website/static/stylesheets/styles.sass
+++ b/website/static/stylesheets/styles.sass
@@ -14,6 +14,7 @@ $base-font-family: Georgia, serif
 
 $vertical-whitespace: 40px
 
+@import reset
 @import font
 @import elements
 @import page
@@ -23,5 +24,6 @@ $vertical-whitespace: 40px
 @import about
 @import ../../../birds/static/stylesheets/bird
 @import ../../../birds/static/stylesheets/birds
+@import ../../../birds/static/stylesheets/birds_taxonomical
 @import ../../../creations/static/stylesheets/books
 @import ../../../creations/static/stylesheets/radio
