add scrolling to book tags

--- a/creations/static/stylesheets/books.sass
+++ b/creations/static/stylesheets/books.sass
@@ -19,6 +19,9 @@
         font-style: italic
         font-weight: bold
 
+      .scroll-box
+        max-height: 90px
+
       &:nth-child(4n+1)
         clear: left
 
