--- a/birds/templates/bird.html
+++ b/birds/templates/bird.html
@@ -87,7 +87,7 @@
 
 {% if user.is_authenticated and bird.is_minnesotan %}
 <div class="card">
-  <h3>MOU checklist info</h3>
+  <h3>MOU Checklist Info</h3>
   Status: {{ bird.minnesotaspecies.mou_status }}
   <br>
   Breeding status: {{ bird.minnesotaspecies.mou_breeding_status }}
