--- a/creations/static/stylesheets/radio.sass
+++ b/creations/static/stylesheets/radio.sass
@@ -14,6 +14,6 @@
       width: 100%
       margin-bottom: $vertical-whitespace / 4
 
-      &.scroll-box
+      &#species-tags, &#other-tags
         width: auto
-        max-height: 90px
+        margin-right: 30px
