--- a/website/static/stylesheets/about.sass
+++ b/website/static/stylesheets/about.sass
@@ -1,4 +1,13 @@
 #about
+  #links
+    width: 100%
+    float: left
+    margin-bottom: $vertical-whitespace / 2
+
+    a
+      float: left
+      margin-right: 40px
+
   #primary-photo
     float: left
     width: 40%
@@ -8,12 +17,3 @@
     width: 50%
     margin-left: 5%
     margin-right: 5%
-
-  #links
-    width: 100%
-    float: left
-    margin-bottom: $vertical-whitespace
-
-    a
-      float: right
-      margin-left: 40px
