add pages to navigate research and articles, as well as pages for specific articles or research items. Fix absolute urls for creations.

--- a/creations/templates/books.html
+++ b/creations/templates/books.html
@@ -3,7 +3,7 @@
 
 {% block body_id %}books{% endblock %}
 
-{% block page_title %}Books{% endblock %}
+{% block page_title %}Laura's Books{% endblock %}
 
 {% block content %}
 
