--- a/website/static/stylesheets/styles.sass
+++ b/website/static/stylesheets/styles.sass
@@ -27,3 +27,5 @@ $vertical-whitespace: 40px
 @import ../../../birds/static/stylesheets/birds_taxonomical
 @import ../../../creations/static/stylesheets/books
 @import ../../../creations/static/stylesheets/radio
+@import ../../../creations/static/stylesheets/articles
+@import ../../../creations/static/stylesheets/research
