--- a/website/templates/about.html
+++ b/website/templates/about.html
@@ -10,6 +10,7 @@
     <a href="http://flickr.com/lauraerickson">
       Laura's Photos on Flickr</a>
     <a href="{% url 'books_url' %}">Laura's Books</a>
+    <a href="{% url 'articles_url' %}">Laura's Articles</a>
   </div>
 
   <img id="primary-photo"
