--- a/creations/templates/research.html
+++ b/creations/templates/research.html
@@ -25,7 +25,7 @@
 
 {% if research_item.attribution %}
 <div>
-  Date: {{ research_item.attribution }}
+  Attribution: {{ research_item.attribution|markdown }}
 </div>
 {% endif %}
 
