do not show research nav pages or non-public research pages to not authenticated users. fix some other bugs.

--- a/website/static/stylesheets/header.sass
+++ b/website/static/stylesheets/header.sass
@@ -27,7 +27,10 @@
       &:hover, &.active
         color: lighten($peach-orange, 5%)
 
-  #admin-link
+  #upper-right-links
     position: absolute
     top: 0
     right: 0
+
+    a
+      margin-left: 10px
