allow markdown for research category notes and research attribution

--- a/creations/templates/research_categories.html
+++ b/creations/templates/research_categories.html
@@ -13,7 +13,7 @@
   <a href="{% url 'research_category_url' id=category.id %}">
     {{ category.name }}</a>
     <br>
-    {{ category.notes }}
+    {{ category.notes|markdown }}
   </li>
 {% endfor %}
 </ul>
