add id to 101 ways list

--- a/waystohelp/templates/101waystohelpbirds.html
+++ b/waystohelp/templates/101waystohelpbirds.html
@@ -9,7 +9,8 @@
 <ul>
 {% for way in ways %}
   <li>
-    <a href="{% url 'waytohelp_url' id=way.id %}">{{ way.title }}</a>
+    <a href="{% url 'waytohelp_url' id=way.id %}">
+      {{ way.id }}{{ way.title }}</a>
   </li>
 {% endfor %}
 </ul>
