--- a/waystohelp/templates/waytohelpbirds.html
+++ b/waystohelp/templates/waytohelpbirds.html
@@ -3,7 +3,7 @@
 
 {% block body_id %}way-to-help{% endblock %}
 
-{% block page_title %}{{ way.id }}{{ way.title }}{% endblock %}
+{% block page_title %}{{ way.id }}. {{ way.title }}{% endblock %}
 
 {% block content %}
 
