--- a/website/templates/header.html
+++ b/website/templates/header.html
@@ -5,9 +5,8 @@
 {% url 'waystohelp_url' as waystohelp_url %}
 
 <div id="header">
-  Laura Erickson's
   <a href="{{ home_url }}">
-    <h1>For the Birds</h1>
+    <h1>Laura Erickson's For the Birds</h1>
   </a>
 
   <div id="menu">
